Wechsel auf Java 8 (List.of und Observable<> ersetzt)